--- a/index.html
+++ b/index.html
@@ -284,7 +284,7 @@
         // الانتقال إلى الصفحة الرئيسية
         function redirectToMainPage() {
             // هنا يتم الانتقال إلى الصفحة الرئيسية
-            window.location.href = "Main page.html";
+            window.location.href = "Main%20page.html";
         }
         
         // بدء عملية التحميل عند تحميل الصفحة
