--- a/Login-Admins.html
+++ b/Login-Admins.html
@@ -920,7 +920,7 @@
         
         <!-- العودة للموقع الرئيسي -->
         <div class="back-to-home">
-<a href="Main-Page.html" class="back-link">
+<a href="main-page.html" class="back-link">
     <i class="fas fa-arrow-right"></i>
     العودة إلى الموقع الرئيسي
 </a>
@@ -1260,4 +1260,5 @@
         });
     </script>
 </body>
+
 </html>
