--- a/main-page.html
+++ b/main-page.html
@@ -25,7 +25,7 @@
         }
         
         body {
-            background: linear-gradient(135deg, var(--orange-light), var(--orange-medium), var(--orange-dark));
+            background: linear-gradient(135deg, #ff8c00, #ff9100, #ff5e01);
             background-size: 400% 400%;
             animation: gradient 15s ease infinite;
             min-height: 100vh;
@@ -818,4 +818,5 @@
         });
     </script>
 </body>
+
 </html>
