--- a/Login-Admins.html
+++ b/Login-Admins.html
@@ -54,12 +54,7 @@
             line-height: 1.6;
             font-weight: 400;
             color: #333;
-            background: linear-gradient(135deg, 
-                #ffcc80 0%, 
-                #ffb74d 25%, 
-                #ffa726 50%, 
-                #ff9800 75%, 
-                #fb8c00 100%);
+            background: linear-gradient(135deg, #ff8c00, #ff9100, #ff5e01);
             background-size: 400% 400%;
             animation: gradientBackground 20s ease infinite;
             min-height: 100vh;
@@ -1262,3 +1257,4 @@
 </body>
 
 </html>
+
