--- a/Electric-Cars-Parking.html
+++ b/Electric-Cars-Parking.html
@@ -29,7 +29,7 @@
         }
         
         body {
-            background: linear-gradient(135deg, var(--orange-light), var(--orange-medium), var(--orange-dark));
+            background: linear-gradient(135deg, #ff8c00, #ff9100, #ff5e01);
             background-size: 400% 400%;
             animation: gradient 15s ease infinite;
             min-height: 100vh;
@@ -1377,3 +1377,4 @@
     </script>
 </body>
 </html>
+
