--- a/Smart-Garage-Store.html
+++ b/Smart-Garage-Store.html
@@ -25,7 +25,7 @@
         }
         
         body {
-            background: linear-gradient(135deg, #ffd699 0%, #ff9900 50%, #cc8400 100%);
+            background: linear-gradient(135deg, #ff8c00, #ff9100, #ff5e01);
             background-attachment: fixed;
             min-height: 100vh;
             color: var(--dark);
@@ -955,4 +955,5 @@
         });
     </script>
 </body>
+
 </html>
