--- a/Smart-Garage-Store.html
+++ b/Smart-Garage-Store.html
@@ -18,7 +18,7 @@
             --orange-light: #ffd699;
             --orange-medium: #ff9900;
             --orange-dark: #cc8400;
-            --orange-gradient: linear-gradient(135deg, #ffd699, #ff9900, #cc8400);
+            --orange-gradient: linear-gradient(135deg, #ff8c00, #ff9100, #ff5e01);
             --dark: #181818; /* أغمق */
             --light: #f8f9fa;
             --header-footer-bg: #181818; /* خلفية داكنة للهيدر والفوتر */
@@ -957,3 +957,4 @@
 </body>
 
 </html>
+
